# binroots

./: .gitignore  Cargo.toml  LICENSE  MIGRATION.md  README.md
.github/workflows/: ci.yml
binroots-derive/: Cargo.toml
binroots-proc-macros/: Cargo.toml  MIGRATION.md  README.md
binroots-proc-macros/src/: lib.rs
examples/: example.rs
src/: field.rs  fileserializer.rs  lib.rs  save.rs
