[package]
name = "binroots"
version = "0.1.0"
authors = ["Carter Reeb <me@carteris.online>"]
description = "Serialize and expose data, one file per field."
edition = "2021"
repository = "https://github.com/carterisonline/binroots"
license = "Apache-2.0"
license-file = "LICENSE"
keywords = ["serialization", "unix", "file", "macro", "filesystem"]
categories = ["encoding", "filesystem"]
readme = "README.md"

[dependencies]
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_tuple = "0.5"
binroots-derive = { path = "./binroots-derive/" }
itoa = "1"
ryu = "1"
tracing = "0.1"

[workspace]
members = ["./binroots-derive"]

[[bin]]
name = "example"
path = "./bin/example.rs"

[[bin]]
name = "manual"
path = "./bin/manual.rs"
