[package]
name = "binroots"
version = "0.2.0"
authors = ["Carter Reeb <me@carteris.online>"]
description = "Serialize and expose data, one file per field."
edition = "2021"
repository = "https://github.com/carterisonline/binroots"
homepage = "https://github.com/carterisonline/binroots"
license = "Apache-2.0"
keywords = ["serialization", "unix", "file", "macro", "filesystem"]
categories = ["encoding", "filesystem"]
readme = "README.md"
documentation = "https://docs.rs/binroots"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_tuple = "0.5"
binroots-proc-macros = { path = "./binroots-proc-macros", version = "^0.1" }
itoa = "1"
ryu = "1"
tracing = "0.1"

[workspace]
members = ["./binroots-proc-macros"]

[[example]]
name = "example"
path = "./bin/example.rs"

[[example]]
name = "manual"
path = "./bin/manual.rs"
